Do query selector exercises to 15min mark in video #6

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
 </head>
 <body>
     <h3>Exercises on the DOM</h3>
-  
-    
+  <p>Find the element by querying the DOM!</p>
+  <div>
+    <p>Hello Bob, parse this!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p> 
+    <p>Laboriosam laudantium quam incidunt molestias quia animi</p> 
+    <p>id ullam illum optio quibusdam! Ab hic qui quis voluptate</p> 
+    <p>officiis iste, eos quo velit?</p>
+    <p class= 'error'>That looks like an error!</p>
+  </div>
+
+  <div class= 'error'>Yes, it is an error!</div><br>
+
+  <div class= 'error'>And this is another error!</div>
     <script src= 'jscript.js'></script>
 </body>
 </html>
