In jscript.js complete up to udemy 49 getting and setting attributes Add jscriptA.js for udemy 50 changing CSS styles on

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <m<eta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>domex-6</title>
 </head>
 <body>
+  <h1 id="page-title">The Dom</h1>
     <h3>Exercises on the DOM</h3>
-  <p>Find the element by querying the DOM!</p>
+  <h4>Step 1 Find the element by querying the DOM!</h4>
+  <h4>Step 2 is to do something with the element found with the query.</h4>
+  <h4>Step 3? perhaps, this is working on an href!</h4>
+<a href= "https://www.google.com">Your link to some cool site...</a>
+<p class= 'error'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil cumque quo debitis eaque tenetur voluptates ab, mollitia velit inventore iusto corporis est dolor fugiat veritatis aliquid labore eveniet voluptatem voluptatibus!</p>
+
   <div>
     <p>Hello Bob, parse this!</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p> 
@@ -20,6 +26,11 @@
   <div class= 'error'>Yes, it is an error!</div><br>
 
   <div class= 'error'>And this is another error!</div>
+
+  <div class= 'content'>
+    <p>is this content? yes!</p>
+</div>
+
     <script src= 'jscript.js'></script>
 </body>
 </html>
