--- a/index.html
+++ b/index.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <m<eta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>domex-6</title>
+    <link rel="stylesheet"href= "stylesheet.CSS">
+      <title>domex-6</title>
+
 </head>
 <body>
-  <h1 id="page-title">The Dom</h1>
+  <h1 id="page-title" style= "color: orange;">The Dom</h1>
     <h3>Exercises on the DOM</h3>
   <h4>Step 1 Find the element by querying the DOM!</h4>
   <h4>Step 2 is to do something with the element found with the query.</h4>
-  <h4>Step 3? perhaps, this is working on an href!</h4>
-<a href= "https://www.google.com">Your link to some cool site...</a>
-<p class= 'error'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil cumque quo debitis eaque tenetur voluptates ab, mollitia velit inventore iusto corporis est dolor fugiat veritatis aliquid labore eveniet voluptatem voluptatibus!</p>
+  <h4>Step 3 this is working on an href! wow</h4>
+  <h4>Step 4 udemy 50 starts in jscriptA.js</h4>
+  <h4>Step 5 udemy 51 second in jscriptA.js</h4>
 
+<p class= 'error'>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil 
+  cumque quo debitis eaque tenetur voluptates ab, mollitia velit 
+  inventore iusto corporis est dolor fugiat veritatis aliquid labore 
+  eveniet voluptatem voluptatibus!
+</p>
+
+<a href= "https://www.google.com">Your link to some cool site...</a>
   <div>
     <p>Hello Bob, parse this!</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p> 
@@ -32,5 +42,6 @@
 </div>
 
     <script src= 'jscript.js'></script>
+    <script src= 'jscriptA.js'></script>
 </body>
 </html>
