Complete udemy 52 in jscriptA.js and start 53

--- a/index.html
+++ b/index.html
@@ -9,21 +9,33 @@
 </head>
 <body>
   <h1 id="page-title" style= "color: orange;">The Dom</h1>
-    <h3>Exercises on the DOM</h3>
+    <h3 class= "title">Exercises on the DOM</h3>
   <h4>Step 1 Find the element by querying the DOM!</h4>
   <h4>Step 2 is to do something with the element found with the query.</h4>
   <h4>Step 3 this is working on an href! wow</h4>
   <h4>Step 4 udemy 50 starts in jscriptA.js</h4>
-  <h4>Step 5 udemy 51 second in jscriptA.js</h4>
+  <h4>Step 5 udemy 51 second exercise in jscriptA.js</h4>
 
-<p class= 'error'>
+  <p>lorem error ipsum</p>
+  <p>lorem success ipsum</p>
+  <p>lorem ipsum lorem</p>
+  <p>lorem ipsum success</p>
+  <p>error lorem ipsum</p>
+  <p>lorem ipsum lorem</p>
+  <p>lorem ipsum error</p>
+  <p>success lorem ipsum</p>
+
+
+  <!-- <p class= 'error'> -->
+  <!-- <p class= 'error another test'> -->
+    <!--<p>
   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil 
   cumque quo debitis eaque tenetur voluptates ab, mollitia velit 
   inventore iusto corporis est dolor fugiat veritatis aliquid labore 
   eveniet voluptatem voluptatibus!
-</p>
+</p>-->
 
-<a href= "https://www.google.com">Your link to some cool site...</a>
+<!--<a href= "https://www.google.com">Your link to some cool site...</a>
   <div>
     <p>Hello Bob, parse this!</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p> 
@@ -39,7 +51,7 @@
 
   <div class= 'content'>
     <p>is this content? yes!</p>
-</div>
+</div>-->
 
     <script src= 'jscript.js'></script>
     <script src= 'jscriptA.js'></script>
