Complete #53 events eg click and #54 creating and deleting elements Create jscriptB.js for #55 event bubbling and delegation

--- a/index.html
+++ b/index.html
@@ -2,13 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <m<eta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"href= "stylesheet.CSS">
       <title>domex-6</title>
-
+      <style>
+        li{
+          list-style-type: none;
+          max-width: 200px;
+          padding: 8px;
+          margin: 8px auto;
+          background: #eee;
+          border: 1px dotted #ddd;
+        }
+        </style>
 </head>
 <body>
-  <h1 id="page-title" style= "color: orange;">The Dom</h1>
+  <h1>The DOM</h1>
+  <h2>todo</>
+  <ul>
+    <li>buy milk</li>
+    <li>read a book</li>
+    <li>cook dinner</li>
+    <li>put rubbish bins out</li>
+    <li>play the guitar</li>
+    <li>pay the bills :(</li>
+  </ul>
+
+  <button>add a new todo item</button> 
+
+  <!--<article>
+    <p>new sibling</p>
+    <h2>article title</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <div>written by the net ninja</div>
+  </article>-->
+
+  <!--<h1 id="page-title" style= "color: orange;">The Dom</h1>
     <h3 class= "title">Exercises on the DOM</h3>
   <h4>Step 1 Find the element by querying the DOM!</h4>
   <h4>Step 2 is to do something with the element found with the query.</h4>
@@ -23,7 +54,7 @@
   <p>error lorem ipsum</p>
   <p>lorem ipsum lorem</p>
   <p>lorem ipsum error</p>
-  <p>success lorem ipsum</p>
+  <p>success lorem ipsum</p>-->
 
 
   <!-- <p class= 'error'> -->
