Complete #55 in jscriptA.js not jscriptB.js Create indexA.html for #56 more DOM events with jscriptB.js

--- a/index.html
+++ b/index.html
@@ -86,5 +86,7 @@
 
     <script src= 'jscript.js'></script>
     <script src= 'jscriptA.js'></script>
+    <script src= 'jscriptB.js'></script>
+    
 </body>
 </html>
