--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <h1>The DOM</h1>
-  <h2>todo</>
+  <!--<h2>todo</>
   <ul>
     <li>buy milk</li>
     <li>read a book</li>
@@ -28,7 +28,7 @@
     <li>pay the bills :(</li>
   </ul>
 
-  <button>add a new todo item</button> 
+  <button>add a new todo item</button>-->
 
   <!--<article>
     <p>new sibling</p>
@@ -45,7 +45,7 @@
   <h4>Step 2 is to do something with the element found with the query.</h4>
   <h4>Step 3 this is working on an href! wow</h4>
   <h4>Step 4 udemy 50 starts in jscriptA.js</h4>
-  <h4>Step 5 udemy 51 second exercise in jscriptA.js</h4>
+  <h4>Step 5 udemy 51 second exercise in jscriptA.js</h4>-->
 
   <p>lorem error ipsum</p>
   <p>lorem success ipsum</p>
@@ -54,7 +54,7 @@
   <p>error lorem ipsum</p>
   <p>lorem ipsum lorem</p>
   <p>lorem ipsum error</p>
-  <p>success lorem ipsum</p>-->
+  <p>success lorem ipsum</p>
 
 
   <!-- <p class= 'error'> -->
@@ -87,6 +87,7 @@
     <script src= 'jscript.js'></script>
     <script src= 'jscriptA.js'></script>
     <script src= 'jscriptB.js'></script>
+    
     
 </body>
 </html>
